Bug 1372928 - prioritise text/calendar the same as text/plain in plaintext mode so inviation is displayed. r=MakeMyDay