mailnews/mime/src/mimemalt.cpp
@@ -443,6 +443,14 @@ MimeMultipartAlternative_prioritize_part(char *content_type,
       return PRIORITY_TEXT_PLAIN;
     }
 
+    if (!PL_strncasecmp(text_type, "calendar", 8) && prefer_plaintext) {
+      /*
+       * text/calendar receives an equally high priority so an invitation
+       * shows even in plaintext mode.
+       */
+      return PRIORITY_HIGHEST;
+    }
+
     /* Need to white-list all text/... types that are or could be implemented. */
     if (!PL_strncasecmp(text_type, "html", 4) ||
         !PL_strncasecmp(text_type, "enriched", 8) ||
